# sun_agent_harness

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: roadmap.md
docs/learning/: PLAN.md  PLAN_phase2_agent.md  cheatsheet_phase1_cli.md
install/: install.sh
src/harness/: __init__.py  __main__.py  config.py  config_writer.py  context.py  llm.py  loop.py  safety.py
src/harness/tools/: __init__.py  builtins.py  executor.py  registry.py
tests/: test_cli.py  test_wiring.py
