[project]
name = "sun-harness"
version = "0.1.0"
description = "A minimal, self-built agent harness for the Linux command line."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "tiktoken>=0.13.0",
    "typer>=0.26.8",
]

[project.scripts]
sun = "harness.__main__:app"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
